--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-toggle-group": "^1.0.2",
     "@reduxjs/toolkit": "^1.9.2",
     "lodash.get": "^4.4.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "zod": "^3.20.2"
   },
@@ -23,6 +25,7 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
